--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "sap-ai-core-llm-proxy"
 version = "0.1.0"
 description = "SAP AI Core Service Proxy Server"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.13,<3.14"
 dependencies = [
     "ai-core-sdk>=2.6.2",
     "aioboto3>=15.1.0",
