Add Makefile for building and packaging native application for the proxy server: make will do the trick.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,5 +10,6 @@ dependencies = [
     "flask>=3.1.2",
     "litellm>=1.79.3",
     "openai>=2.7.1",
+    "pyinstaller>=6.16.0",
     "sap-ai-sdk-gen[all]>=5.8.0",
 ]
