feat(test): enhance testing infrastructure with new commands and coverage
- Add new test commands: `test-cov`, `test-verbose`, `test-file`, and `test-pattern`
- Introduce `install-test-deps` command to simplify dependency installation
- Update `test` command to always sync dev dependencies before running
- Add optional dev dependencies (pytest, pytest-cov, pytest-mock, pytest-asyncio)
- Update help section to document new testing commands
- Lock new test dependencies in uv.lock (coverage, pytest plugins)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,3 +14,11 @@ dependencies = [
     "pyinstaller>=6.16.0",
     "sap-ai-sdk-gen[all]>=5.8.0",
 ]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=8.0.0",
+    "pytest-cov>=4.1.0",
+    "pytest-mock>=3.12.0",
+    "pytest-asyncio>=0.23.0",
+]
