--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,3 +22,10 @@ dev = [
     "pytest-mock>=3.12.0",
     "pytest-asyncio>=0.23.0",
 ]
+
+[dependency-groups]
+dev = [
+    "pytest>=9.0.2",
+    "pytest-cov>=7.0.0",
+    "pytest-mock>=3.15.1",
+]
