docs: update Phase 4 implementation with proxy_helpers module
Refactor proxy_server.py and update Phase 4 documentation to use the new
modular architecture:

- Update backward compatibility examples to import from proxy_helpers
- Remove ~1000 lines of conversion and detection logic from proxy_server.py
- Extract model detection (Detector class) and payload conversion
  (Converters class) into proxy_helpers module
- Add comprehensive test coverage for Detector and Converters classes
- Maintain backward compatibility through wrapper functions
- Improve code organization and maintainability by separating concerns

This change implements the modular refactoring outlined in Phase 4,
significantly reducing the main proxy_server.py file size while
preserving all existing functionality through the new proxy_helpers
module.

--- a/pytest.ini
+++ b/pytest.ini
@@ -10,13 +10,14 @@ python_functions = test_*
 testpaths = tests
 
 # Output options
-addopts = 
+addopts =
     -v
     --tb=short
     --strict-markers
     --disable-warnings
     --color=yes
     --cov=proxy_server
+    --cov=proxy_helpers
     --cov-report=html
     --cov-report=term-missing
     --cov-report=xml
