--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "sap-ai-core-llm-proxy"
-version = "0.1.17"
+version = "0.1.18"
 description = "SAP AI Core Service Proxy Server"
 readme = "README.md"
 requires-python = ">=3.13,<3.14"
@@ -21,4 +21,11 @@ dev = [
     "pytest-cov>=4.1.0",
     "pytest-mock>=3.12.0",
     "pytest-asyncio>=0.23.0",
+]
+
+[dependency-groups]
+dev = [
+    "pytest>=9.0.2",
+    "pytest-cov>=7.0.0",
+    "pytest-mock>=3.15.1",
 ]
