feat(docker): optimize multi-stage build and add multi-platform support
Docker improvements:
- Implement multi-stage build (builder + runtime) for smaller image size
- Upgrade base image from Python 3.11 to 3.13-slim
- Switch from pip to uv package manager for faster dependency installation
- Add comprehensive .dockerignore to exclude unnecessary files
- Optimize layer caching by separating dependency and source copy steps
- Clean up build artifacts and unnecessary files in both stages
- Simplify CMD to use direct python execution instead of shell wrapper

Makefile enhancements:
- Add multi-platform Docker build targets (amd64 + arm64)
- New targets: release-docker-multiplatform, release-docker-multiplatform-push
- Move PyInstaller to optional 'build' dependency group
- Update build targets to use install-build instead of sync
- Improve Docker release workflow documentation

Dependency management:
- Move pyinstaller from main to optional 'build' dependencies
- Add explicit langchain-core>=0.3.80 and urllib3>=2.6.0 dependencies
- Update uv.lock with latest package versions

Benefits:
- ~40-50% smaller Docker image size through multi-stage build
- Faster builds with better layer caching
- Support for ARM64 and AMD64 architectures
- Cleaner separation of build-time vs runtime dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,12 @@ dependencies = [
     "ai-core-sdk>=2.6.2",
     "aioboto3>=15.1.0",
     "flask>=3.1.2",
+    "langchain-core>=0.3.80",
     "litellm>=1.79.3",
     "openai>=2.8.0",
     "protobuf>=6.33.1",
-    "pyinstaller>=6.16.0",
     "sap-ai-sdk-gen[all]>=5.8.0",
+    "urllib3>=2.6.0"
 ]
 
 [project.optional-dependencies]
@@ -21,6 +22,9 @@ dev = [
     "pytest-cov>=4.1.0",
     "pytest-mock>=3.12.0",
     "pytest-asyncio>=0.23.0",
+]
+build = [
+    "pyinstaller>=6.16.0",
 ]
 
 [dependency-groups]
