--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,14 +8,21 @@ dependencies = [
     "ai-core-sdk>=2.6.2",
     "aioboto3>=15.1.0",
     "botocore>=1.35.0",
+    "cachetools==6.2.4",
     "flask>=3.1.2",
+    "google-auth==2.45.0",
+    "google-cloud-bigquery==3.39.0",
+    "google-genai==1.56.0",
     "langchain-core>=0.3.80",
-    "litellm>=1.79.3",
-    "openai>=2.8.0",
-    "protobuf>=6.33.1",
+    "litellm==1.80.10",
+    "numpy==2.3.5",
+    "openai==2.13.0",
+    "proto-plus==1.27.0",
+    "protobuf==6.33.2",
     "sap-ai-sdk-gen[all]>=5.8.0",
+    "sqlalchemy==2.0.45",
     "tenacity>=9.0.0",
-    "urllib3>=2.6.0"
+    "urllib3>=2.6.0",
 ]
 
 [project.optional-dependencies]
