feat(test): add integration test targets for localhost proxy testing
Add comprehensive Makefile targets for running integration tests against a localhost proxy server:
- `test-integration`: Run all integration tests
- `test-integration-smoke`: Run quick smoke tests for basic functionality
- `test-integration-streaming`: Run streaming response tests
- `test-integration-model`: Run tests for a specific model (with validation)

Also add corresponding pytest markers (real, smoke, streaming, claude, openai, gemini) to support test categorization and filtering.

This enables easier testing workflows during development and CI/CD, allowing developers to quickly validate specific functionality or models without running the full test suite.

====================================================================================================================== FAILURES ======================================================================================================================
___________________________________________________________________________________________ TestChatCompletionsNonStreaming.test_simple_completion[gpt-5] ____________________________________________________________________________________________
tests/integration/test_chat_completions.py:40: in test_simple_completion
    assert response.status_code == 200, f"Expected 200, got {response.status_code}: {response.text}"
E   AssertionError: Expected 200, got 500: {
E       "error": "400 Client Error: Bad Request for url: https://api.ai.prod.eu-central-1.aws.ml.hana.ondemand.com/v2/inference/deployments/d385011b676eaa34/chat/completions?api-version=2023-05-15"
E     }
E
E   assert 500 == 200
E    +  where 500 = <Response [500]>.status_code
__________________________________________________________________________________________ TestChatCompletionsNonStreaming.test_token_usage_present[gpt-5] ___________________________________________________________________________________________
tests/integration/t

--- a/pytest.ini
+++ b/pytest.ini
@@ -29,6 +29,12 @@ markers =
     slow: Tests that take longer to run
     requires_network: Tests that require network access
     requires_credentials: Tests that require valid SAP AI Core credentials
+    real: Real integration tests against localhost proxy server
+    smoke: Quick smoke tests for basic functionality
+    streaming: Tests for streaming responses
+    claude: Claude-specific tests
+    openai: OpenAI-compatible tests
+    gemini: Gemini-specific tests
 
 # Coverage options
 [coverage:run]
