--- a/pytest.ini
+++ b/pytest.ini
@@ -22,6 +22,19 @@ addopts =
     --cov-report=term-missing
     --cov-report=xml
 
+# Logging options
+# To enable debug logging during tests, use: pytest --log-cli-level=DEBUG
+log_cli = false
+log_cli_level = INFO
+log_cli_format = %(asctime)s [%(levelname)8s] %(name)s - %(message)s
+log_cli_date_format = %Y-%m-%d %H:%M:%S
+
+# File logging for tests
+log_file = logs/pytest.log
+log_file_level = DEBUG
+log_file_format = %(asctime)s [%(levelname)8s] %(name)s - %(message)s
+log_file_date_format = %Y-%m-%d %H:%M:%S
+
 # Markers for organizing tests
 markers =
     unit: Unit tests for individual functions and classes
