Refactor proxy server tests to use updated model_to_deployment_urls and improve configuration handling

--- a/pytest.ini
+++ b/pytest.ini
@@ -9,6 +9,9 @@ python_functions = test_*
 # Test paths
 testpaths = tests
 
+# Python path for imports
+pythonpath = .
+
 # Output options
 addopts =
     -v
