feat: add transport logging and improve log formatting
- Add transport logger for request/response tracing in embedding endpoint
- Add uuid dependency for generating trace IDs
- Improve log formatter to include filename and line number
- Add trace UUID to embedding requests for better debugging
- Remove unused logging import from proxy_server.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "sap-ai-sdk-gen[all]>=5.10.0",
     "tenacity>=9.0.0",
     "urllib3>=2.6.0",
+    "uuid>=1.30",
 ]
 
 [project.optional-dependencies]
