--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ description = "SAP AI Core Service Proxy Server"
 readme = "README.md"
 requires-python = ">=3.13,<3.14"
 dependencies = [
-    "ai-core-sdk>=2.6.2",
     "aioboto3>=15.1.0",
+    "basedpyright>=1.36.2",
     "botocore>=1.35.0",
     "flask>=3.1.2",
     "langchain-core>=0.3.80",
@@ -14,6 +14,7 @@ dependencies = [
     "openai>=2.8.0",
     "protobuf>=6.33.1",
     "pydantic>=2.0.0",
+    "ruff>=0.14.10",
     "sap-ai-sdk-gen[all]>=5.10.0",
     "tenacity>=9.0.0",
     "urllib3>=2.6.0",
@@ -33,7 +34,12 @@ build = [
 
 [dependency-groups]
 dev = [
+    "mypy>=1.19.1",
+    "pip-audit>=2.10.0",
+    "pylint>=4.0.4",
     "pytest>=9.0.2",
     "pytest-cov>=7.0.0",
     "pytest-mock>=3.15.1",
+    "ruff>=0.14.10",
+    "safety>=3.7.0",
 ]
