feat: add uvx support with entry point and update documentation
- Add main() entry point function in proxy_server.py for better modularity
- Configure project.scripts in pyproject.toml to enable 'sap-ai-proxy' command
- Add setuptools configuration for proper package structure
- Update README.md with uvx usage instructions as recommended method
- Update CLAUDE.md with uvx examples and reference to new UVX_USAGE.md
- Add comprehensive UVX_USAGE.md documentation
- Add CHANGELOG_UVX.md documenting the uvx migration

This enables running the proxy with 'uvx --from . sap-ai-proxy' without
installation, and will support 'uvx sap-ai-proxy' after PyPI publishing.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,9 @@ build = [
     "pyinstaller>=6.16.0",
 ]
 
+[project.scripts]
+sap-ai-proxy = "proxy_server:main"
+
 [dependency-groups]
 dev = [
     "black>=25.12.0",
@@ -44,3 +47,7 @@ dev = [
     "ruff>=0.14.10",
     "safety>=3.7.0",
 ]
+
+[tool.setuptools]
+packages = ["auth", "config", "utils"]
+py-modules = ["proxy_server", "proxy_helpers"]
