--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "pydantic>=2.0.0",
     "pyrefly>=0.46.1",
     "ruff>=0.14.10",
-    "sap-ai-sdk-gen[all]>=5.10.0",
+    "sap-ai-sdk-gen>=5.10.0",
+    "google-genai>=0.8.0",
     "tenacity>=9.0.0",
     "types-requests>=2.32.4.20250913",
     "urllib3>=2.6.0",
