--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ dependencies = [
     "flask>=3.1.2",
     "langchain-core>=0.3.80",
     "litellm==1.80.11",
-    "numpy==2.4.0",
+    "numpy>=2.4.1",
     "openai>=2.8.0",
     "protobuf>=6.33.1",
     "pydantic>=2.0.0",
