--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ dependencies = [
     "botocore>=1.35.0",
     "flask>=3.1.2",
     "langchain-core>=0.3.80",
-    "litellm==1.80.11",
+    "litellm==1.81.4",
     "numpy>=2.4.1",
     "openai>=2.8.0",
     "protobuf>=6.33.1",
@@ -21,8 +21,12 @@ dependencies = [
     "google-genai>=0.8.0",
     "tenacity>=9.0.0",
     "types-requests>=2.32.4.20250913",
-    "urllib3>=2.6.0",
+    "urllib3>=2.6.3",
     "uuid>=1.30",
+    "pyasn1==0.6.2",
+    "uuid-utils==0.14.0",
+    "pytokens==0.4.0",
+    "grpcio==1.76.0",
 ]
 
 [project.optional-dependencies]
