--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,7 +64,7 @@ requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-packages = ["auth", "config", "utils"]
+packages = ["auth", "config", "utils", "handlers"]
 py-modules = ["proxy_server", "proxy_helpers"]
 
 [tool.ruff]
