--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,7 +65,7 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
 packages = ["auth", "config", "utils", "handlers"]
-py-modules = ["proxy_server", "proxy_helpers"]
+py-modules = ["proxy_server", "proxy_helpers", "version", "cli", "load_balancer"]
 
 [tool.ruff]
 select = ["ANN"]  # ANN001 args, ANN201 returns, etc.
