fix(deps): add missing SAP AI SDK dependencies
Add ai-api-client-sdk and ai-core-sdk which are required by
gen-ai-hub-proxy but were missing from project dependencies, causing
ImportErrors during testing.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,8 @@ dependencies = [
     "uuid-utils==0.14.0",
     "pytokens==0.4.0",
     "grpcio==1.76.0",
+    "ai-api-client-sdk>=2.6.1",
+    "ai-core-sdk>=2.6.2",
 ]
 
 [project.optional-dependencies]
