--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,8 +27,7 @@ dependencies = [
     "uuid-utils==0.14.0",
     "pytokens==0.4.0",
     "grpcio==1.76.0",
-    "ai-api-client-sdk>=2.6.1",
-    "ai-core-sdk>=2.6.2",
+    "requests>=2.32.3",
 ]
 
 [project.optional-dependencies]
