--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ dependencies = [
     "botocore>=1.35.0",
     "flask>=3.1.2",
     "pydantic>=2.0.0",
-    "sap-ai-sdk-gen>=5.10.0",
+    "sap-ai-sdk-gen[all]>=5.10.0",
     "tenacity>=9.0.0",
     "requests>=2.32.3",
 ]
