--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "sap-ai-sdk-gen[all]>=5.10.0",
     "tenacity>=9.0.0",
     "requests>=2.32.3",
+    "diskcache>=5.6.3",
 ]
 
 [project.optional-dependencies]
