--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,11 @@ dependencies = [
     "tenacity>=9.0.0",
     "requests>=2.32.3",
     "diskcache>=5.6.3",
+    "numpy>=2.4.2",
+    "tqdm>=4.67.2",
+    "pyrefly>=0.50.1",
+    "orjson>=3.11.6",
+    "langsmith>=0.6.7",
 ]
 
 [project.optional-dependencies]
