fix: add inspect_deployments to py-modules in setuptools config
The sap-ai-inspect script entry point was failing with ModuleNotFoundError
because inspect_deployments was not included in the py-modules list during
package installation. This fix ensures the module is properly packaged.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,7 +58,7 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
 packages = ["auth", "config", "utils", "handlers", "blueprints"]
-py-modules = ["proxy_server", "proxy_helpers", "version", "cli", "load_balancer"]
+py-modules = ["proxy_server", "proxy_helpers", "version", "cli", "load_balancer", "inspect_deployments"]
 
 [tool.ruff]
 select = ["ANN"]  # ANN001 args, ANN201 returns, etc.
