--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ dev = [
     "types-requests>=2.32.4.20250913",
     "basedpyright>=1.36.2",
     "pyrefly>=0.46.1",
+    "diskcache-stubs",
 ]
 
 [tool.uv]
